Use DatatypeConverter instead Base64 for Java 6 and 7 compatibility.